Added JavaScript functionality

--- a/Courses.html
+++ b/Courses.html
@@ -26,7 +26,8 @@
     <h4>CST2335 Mobile Graphical Interface Programming</h4>
     <h4>CST2234 Systems Analysis and Design</h4>
     <h4>CST8283 Business Programming</h4>
-    <h3></h3>
+    <h3>CST8288 Object Oriented Programming With Design Patterns (Java)</h3>
+    <h4></h4>
    </main>
 </body>
 
