--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,7 @@
        <div class="images">
             <img src="Profile.png" class="Profile">
        </div>
+       <script src="scripts.js"></script>
    </div>
    <main>
     
