--- a/Resume.html
+++ b/Resume.html
@@ -5,105 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styless.css">
     <title>Yazid's-Portfolio</title>
-    <link rel="stylesheet" href="styless.css"
 </head>
 <body>
-    <div class="Resume">
-        <h1>Yazid Mohamed</h1>
-        <p class="info">298 Blake Boulevard, Ottawa, ON</p>
-        <p class="info">Phone: 613-698-2939 | Email: <a href="mailto:yazidalamin@gmail.com">yazidalamin@gmail.com</a></p>
-        <p class="info">Alternate Email: <a href="mailto:yazidmohamed103@gmail.com">yazidmohamed103@gmail.com</a></p>
-        
-        <div class="section">
-            <h2>Education</h2>
-            <p><strong>Algonquin College</strong>, Ottawa, ON</p>
-            <p>Computer Programming Diploma (Expected Graduation: Winter 2025)</p>
-            <p>Currently in Level 4 of the program</p>
-            <p>Coursework includes:</p>
-            <ul>
-                <li>Java, JavaScript, COBOL, SQL, PHP, object-oriented analysis and design</li>
-                <li>Operating systems, integrated environments, debugging, testing, and code maintenance</li>
-            </ul>
-            <p><strong>Gloucester High School</strong>, Ottawa, ON (Graduated: June 2021)</p>
-        </div>
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#courses">Courses</a></li>
+        </ul>
+    </nav>
 
-        <div class="section">
-            <h2>Skills & Proficiencies</h2>
-            <h3>Programming Languages:</h3>
-            <ul>
-                <li><strong>Proficient:</strong> Java, JavaScript, COBOL, SQL, PHP</li>
-                <li><strong>Knowledgeable:</strong> C++, C#, HTML, CSS, MongoDB</li>
-            </ul>
-            <h3>Technical Skills:</h3>
-            <ul>
-                <li>Object-Oriented Programming (OOP) with Java</li>
-                <li>Database design and administration (Oracle, SQL)</li>
-                <li>Operating systems and integrated coding environments</li>
-                <li>Debugging, testing, and code maintenance</li>
-                <li>VMware, Linux</li>
-            </ul>
-            <h3>Analytical and Development Skills:</h3>
-            <ul>
-                <li>Problem-solving using Java</li>
-                <li>Relational database design fundamentals</li>
-                <li>Application of SQL for database operations</li>
-                <li>Entity Relationship Diagrams (ERDs)</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Professional Attributes</h2>
-            <ul>
-                <li>Strong problem-solving abilities</li>
-                <li>Excellent communication and collaboration skills</li>
-                <li>Detail-oriented and highly organized</li>
-                <li>Fast learner, motivated, and adaptable</li>
-                <li>Able to work both independently and in teams</li>
-                <li>Cross-cultural competence (experience in Canada, Sudan, and Eritrea)</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Professional Experience</h2>
-            <h3>RPM Groups, Ottawa, ON</h3>
-            <p>Sales Development Representative (October - November 2022)</p>
-            <ul>
-                <li>Engaged with companies, manufacturers, and restaurants across Ontario through cold calling</li>
-                <li>Introduced and sold energy/electricity services, leveraging effective communication and persuasion</li>
-            </ul>
-            <h3>Real Canadian SuperStore, Ottawa, ON</h3>
-            <p>Customer Service Representative (May 2022 - Present)</p>
-            <ul>
-                <li>Processed transactions and handled customer inquiries</li>
-                <li>Provided excellent customer service, resolving issues, and maintaining an organized checkout process</li>
-            </ul>
-            <h3>St. John’s Fish Exchange Kitchen and Wet Bar</h3>
-            <p>Kitchen Assistant (2019)</p>
-            <ul>
-                <li>Assisted with cleaning and various kitchen tasks</li>
-                <li>Prepared orders for takeout, supporting kitchen operations</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Activities, Extracurriculars, and Awards</h2>
-            <ul>
-                <li>Competed in high-level soccer with St. John's U15 NL, reaching the provincial finals</li>
-                <li>Awarded Most Valuable Player (MVP) in 2018 for outstanding performance</li>
-                <li>Served as goalkeeper for St. John's U17, contributing to the team's victory in the provincial tournament in 2019</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>References</h2>
-            <p>Available upon request.</p>
-        </div>
-
-        <div class="section">
-            <h2>My Goal At the Moment</h2>
-            <p>Keen to leverage my Level 4 education and skills in computer programming, database management, and technical mathematics to contribute effectively to dynamic projects. Eager to continue learning and stay abreast of emerging technologies and industry trends.</p>
-        </div>
+    <div id="about">
+        <!-- Content of About Me section -->
     </div>
+    <div id="resume">
+        <!-- Content of Resume section -->
+    </div>
+    <div id="courses">
+        <!-- Content of Courses section -->
+    </div>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
-   
